--- a/RelaxPuzzles3D/Pages/Main/style.css
+++ b/RelaxPuzzles3D/Pages/Main/style.css
@@ -55,7 +55,30 @@ li{
 	border-radius: 67px;
 
 	margin-bottom: 15px;
+	text-align: center;
 }
+.game.featur p{
+	position: relative;
+	top: 62px;
+	padding: 0 0;
+	margin: 0 0;
+	height: 100px;
+
+	font-size: 100px;
+}
+.game.featur:nth-child(1) p{
+	top: 30px;
+	font-size: 175px;
+}
+.game.featur:nth-child(2) p{
+	top: 50px;
+	font-size: 140px;
+}
+.game.featur:nth-child(3) p{
+	top: 69px;
+	font-size: 50px;
+}
+
 .game.name{
 	top: 855px;
 	width: 88%;
